--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -1,12 +1,12 @@
 <view style='height:{{height4*2+20}}px' class='nav-wrap'>
   <view class='nav-title' style='line-height:{{height4*2 + 44}}px;'>{{nick}}</view>
   </view>
-  <view style='height:{{height4*2+20}}px;' class='pad'></view>
+  <view style='height:{{height4*2+30}}px;' class='pad'></view>
 <view class='head'>
   <view class='row1 ml20'>
 
     <view class="index-profile">
-      <image src='{{img2}}' class="index-profile__img"></image>
+      <image mode='aspectFill' src='{{img2}}' class="index-profile__img"></image>
     </view>
     <view class='col ml20 w550'>
       <view class='atten-fans'>
@@ -74,12 +74,13 @@
       <view class='headimg'>
         <image bindtap='userinfo' data-user="{{item.created_by.id}}" class='img2' src='{{item.created_by.headimg}}'></image>
         <view class='nick'>{{item.created_by.nick}}</view>
-        <view data-index="{{index}}" wx:if="{{item.collect==0}}" data-id="{{item.id}}" bindtap='collect' style='position:absolute;left:200rpx;margin-top:15rpx;' class='iconfont icon-xin1'></view>
-        <view data-index="{{index}}" wx:if="{{item.collect==1}}" data-id="{{item.id}}" bindtap='nocollect' style='position:absolute;left:200rpx;margin-top:15rpx;color:red;' class='iconfont icon-xin'></view>
+        <view data-collect='{{item.collect}}' data-id="{{item.id}}" data-index="{{index}}" bindtap='ifcollect'>
+        <view data-index="{{index}}" wx:if="{{item.collect==0}}" data-id="{{item.id}}"  style='position:absolute;left:200rpx;margin-top:15rpx;' class='iconfont icon-xin1'></view>
+        <view data-index="{{index}}" wx:if="{{item.collect==1}}" data-id="{{item.id}}"  style='position:absolute;left:200rpx;margin-top:15rpx;color:red;' class='iconfont icon-xin'></view>
+        </view>
         <view class='numb' wx:if="{{item.collection!=null}}">{{item.collection}}</view>
         <view class='numb' wx:if="{{item.collection==null}}">0</view>
       </view>
-
     </view>
   </view>
   <view class="right">
@@ -94,12 +95,13 @@
       <view class='headimg'>
         <image bindtap='userinfo' data-user="{{item.created_by.id}}" class='img2' src='{{item.created_by.headimg}}'></image>
         <view class='nick'>{{item.created_by.nick}}</view>
-        <view data-index="{{index}}" wx:if="{{item.collect==0}}" data-id="{{item.id}}" bindtap='collect' style='position:absolute;left:200rpx;margin-top:15rpx;' class='iconfont icon-xin1'></view>
-        <view data-index="{{index}}" wx:if="{{item.collect==1}}" data-id="{{item.id}}" bindtap='nocollect' style='position:absolute;left:200rpx;margin-top:15rpx;color:red;' class='iconfont icon-xin'></view>
+        <view data-collect='{{item.collect}}' data-id="{{item.id}}" data-index="{{index}}" bindtap='ifcollect'>
+        <view data-index="{{index}}" wx:if="{{item.collect==0}}" data-id="{{item.id}}"  style='position:absolute;left:200rpx;margin-top:15rpx;' class='iconfont icon-xin1'></view>
+        <view data-index="{{index}}" wx:if="{{item.collect==1}}" data-id="{{item.id}}"  style='position:absolute;left:200rpx;margin-top:15rpx;color:red;' class='iconfont icon-xin'></view>
+        </view>
         <view class='numb' wx:if="{{item.collection!=null}}">{{item.collection}}</view>
         <view class='numb' wx:if="{{item.collection==null}}">0</view>
       </view>
-
     </view>
   </view>
 </view>
@@ -117,7 +119,6 @@
       <view class='headimg'>
         <image bindtap='userinfo' data-user="{{item.created_by.id}}" class='img2' src='{{item.created_by.headimg}}'></image>
         <view class='nick'>{{item.created_by.nick}}</view>
-
         <view data-num="{{item.collection}}" data-id="{{item.id}}" bindtap='nocollect2' style='position:absolute;left:200rpx;margin-top:15rpx;color:red;' class='iconfont icon-xin'></view>
         <view class='numb' wx:if="{{item.collection!=null}}">{{item.collection}}</view>
         <view class='numb' wx:if="{{item.collection==null}}">0</view>
