--- a/app.wxss
+++ b/app.wxss
@@ -2,6 +2,7 @@
 @import '/common/iconfont.wxss';
 @import '/common/iconfont2.wxss';
 @import '/common/iconfont3.wxss';
+@import '/common/iconfont4.wxss';
 
 .top {
   position: fixed;
@@ -15,7 +16,15 @@
   font-size: 28rpx;
   color: #000;
 }
-
+.f26{
+  font-size: 32rpx;
+}
+.pl30{
+  padding-left: 30rpx;
+}
+.c29{
+  color: #de3e29;
+}
 .nav-wrap {
   position: fixed;
   width: 100%;
@@ -24,6 +33,15 @@
   color: #000;
   z-index: 9999999;
 }
+.pl10{
+  padding-left: 10rpx;
+}
+.pl20{
+  padding-left: 20rpx;
+}
+/* .padd{
+  padding-left:10rpx; 
+} */
 
 .nav-title {
   position: absolute;
@@ -65,7 +83,7 @@
 }
 
 .nav-capsule .back-home {
- width:36rpx;
+ width:42rpx;
 height:39rpx;
 padding-top:6px;
 padding-left:20px;
