--- a/pages/addNote/addNote.wxml
+++ b/pages/addNote/addNote.wxml
@@ -3,15 +3,18 @@
   <view class='nav-title' style='line-height:{{height4*2 + 44}}px;'>添加日志</view>
 </view>
 <view style='height:{{height4*2+20}}px;' class='pad'></view>
+<textarea cursor-spacing="10" bindtap='focusChange'  adjust-position='{{true}}' bindblur="content" name="content" value='{{content}}' maxlength='-1' class='textarea' placeholder-class='placeholder' placeholder='这一刻，想说点什么...'></textarea>
 <view class='head'>
   <view wx:key="{{index}}" wx:if="{{index<=8}}" wx:for="{{arr1}}" data-id="{{index}}">
-    <view style='position:absolute;margin-left:22px;margin-top:5rpx;color:#ddd;' data-id="{{index}}" bindtap='delete' class='iconfont2 icon-cha'></view>
+    <view style='position:absolute;margin-left:22px;margin-top:5rpx;color:#de3e29;' data-id="{{index}}" bindtap='delete' class='iconfont2 icon-cha'></view>
     <image data-item="{{item}}" bindtap='previewImage' mode='aspectFill' class='item' src="{{item}}"></image>
   </view>
   <image wx:if="{{check}}" bindtap='add' class='addimg' src='../../images/add.png'></image>
 </view>
 
-<textarea bindblur="content" name="content" value='{{content}}' maxlength='-1' class='textarea' placeholder-class='placeholder' placeholder='这一刻，想说点什么...'></textarea>
+<!-- <view wx:if="{{focus2==true}}" >
+<textarea fixed='true' style='position:fixed;bottom:{{height2+100}}px' focus="{{focus3==true}}" bindfocus='focusText'  bindblur="content" name="content" value='{{content}}' maxlength='-1' class='textarea' placeholder-class='placeholder' placeholder='这一刻，想说点什么...'></textarea>
+</view> -->
 <view class='line'></view>
 <view class='pos'>
   <view style='color:#d7d7d7;' class='iconfont2 icon-weizhi'></view>
