--- a/pages/comments/comments.wxml
+++ b/pages/comments/comments.wxml
@@ -6,7 +6,7 @@
         <image src='../../images/fanhui.png' mode='aspectFill' class='back-pre'></image>
       </view>
       <view bindtap='goIndex'>
-        <image src='../../images/shouye.png' mode='aspectFill' class='back-home'></image>
+        <image src='../../images/shouye22.png' mode='aspectFill' class='back-home'></image>
       </view>
       <view style='width:100%;height:{{height4*2+20}}px;background-color:#fff;'></view>
     </view>
@@ -51,15 +51,15 @@
 <view wx:if="{{input==true}}" class='comment-inp r1'>
   <image class='img2' src='{{user.headimg}}' mode='widthFix'></image>
   <input bindtap='focusInput' disabled="true" value='{{commentVal}}' bindblur='inputVal' class='input' placeholder='说点什么...'></input>
-  <view bindtap='send' class='ml20 f28 send c000'>发送</view>
+  <view bindtap='send' class='ml20 f28 send c29'>发送</view>
 </view>
 <view wx:if="{{input3==true}}" style='position: fixed;width: 100%;height: 80rpx;background-color: #fff;bottom:{{height2}}px;z-index:9;padding-top: 30rpx;padding-left: 20rpx;' class='r1'>
   <image class='img2' src='{{user.headimg}}' mode='widthFix'></image>
   <input bindfocus="focusInput3" adjust-position="{{false}}"  focus="{{focus3}}" value='{{commentVal}}'   bindblur='inputVal3' class='input' placeholder='说点什么...'></input>
-  <view bindtap='send' class='ml20 f28 send c000'>发送</view>
+  <view bindtap='send' class='ml20 f28 send c29'>发送</view>
 </view>
 <view style='bottom:{{height3}}px;' wx:if="{{input2==true}}" class='comment-inp r1'>
   <image class='img2' src='{{user.headimg}}' mode='widthFix'></image>
   <input bindfocus="focusInput2" adjust-position="{{false}}" focus="{{focus2}}" value='{{commentVal2}}' bindblur='inputVal2' class='input' placeholder='回复..'></input>
-  <view bindtap='sendanswer' class='ml20 f28 send c000'>回复</view>
+  <view bindtap='sendanswer' class='ml20 f28 send c29'>回复</view>
 </view>
